--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,6 @@
   "dependencies": {
     "angular": "~1.4.3",
     "bootstrap": "~3.3.5",
-    "angular-route": "~1.4.3"
+    "angular-new-router": "~0.5.3"
   }
 }
